volumes of meta updated

--- a/P004492.opf/meta.yml
+++ b/P004492.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W1KG16458
   title: དྲང་ངེས་རྣམ་འབྱེད་ཀྱི་དཀའ་འགྲེལ་རྩོམ་འཕྲོ་ལེགས་བཤད་སྙིང་པོའི་ཡང་སྙིང་།
   author: ''
-  volumes: {}
+  volumes:
+    f6a361358578477f97407e2ee451d411:
+      image_group_id: I1KG16460
+      title: ''
+      volume_number: 1
+      total_pages: 398
