--- a/P004492.opf/layers/v001/Pagination.yml
+++ b/P004492.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: cb19c89c6f5043ebb3fe1bea16195339
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   018761c141fe4d1db46506e05e8839ea:
